Реализация кеша на SoftReference /4